# SpaceDissident-ServerCore

./: .bashrc_extra  .bashrc_extra.swp  .clang-format  .clang-uml  .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  CMakeLists_GTEST.txt  GameServerCore0.cpp  GameServerCore0.h  README.md  dependencies  setup_workspace.sh
core/: ServerCoreModule.h  basic_setup.h  game_session.cpp  game_session.h  server_core.cpp  server_core.h  server_core_ctx.h  server_core_module.h
core/modules/: TCPServerModule.h  core_mod_id.h  network_core_module.h  test_core_module.cpp  test_core_module.h
decorator/: base_decorator.cpp  base_decorator.h  debug_decorator.cpp  debug_decorator.h  deco.h  decoUtils.h  deco_id.h
docker/: Dockerfile  cmake_caller.sh
docker/cmake_toolchains/: clang.cmake
docs/diagrams/activity/: core_overview.puml
include/spdlog/: common.h  pattern_formatter-inl.h  stopwatch.h
lib/networklib/: CMakeLists.txt  INetworkChannel.h  IOContextWrapper.h  NetworkChannel.h  NetworkUtils.h  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h  UDPClient.h  UDPServer.h  UDPSession.h  networklib.cpp  networklib.h
lib/networklib/session/: network_channel.cpp  network_channel.h  network_session.h
lib/networklib/socket/: basic_socket.h  tcp_socket.h  udp_socket.h
lib/test/: CMakeLists.txt  test_library.cpp  test_library.h
message/: base_message.cpp  base_message.h  message_type_id.h
network/: akrsocket.h  basic_socket.h  connection_manager.h  network_session.h
test/: asio_test.cpp  asio_udp_test.cpp  basic_test.cpp  cmd_processor_test.cpp  gameobject_test.cpp  networklib_test.cpp  server_core_test.cpp  socket_test.cpp  util_test.cpp  world_test.cpp
test/config/: main.ini
uml/: notepad.puml  test_activity_diag.puml  test_class.puml  test_seq_diag.puml  test_use_case.puml
uml/network/session/udp/: udp_session_initialization.puml
util/: cmd_processor.h  config_holder.cpp  config_holder.h  config_parser.h  config_reader.cpp  config_reader.h  core_timer.h  random.h  serializable.h  vector_by_id.h
world/common/: gameobject.h
world/math/: Color.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h  transform.h
